# quip

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: data.rs  error.rs  lib.rs  request.rs  response.rs  token.rs
src/io/: buffer.rs  mod.rs  tcp.rs  tls.rs
src/server/: connection.rs  mod.rs  queue.rs  stream.rs  user.rs
src/server/backend/: memory.rs  mod.rs  simple.rs
src/server/listener/: mod.rs  tcp.rs  tls.rs
src/server/service/: auth.rs  login.rs  mod.rs  send.rs  unauth.rs
