[package]
name = "tchat"
version = "0.1.0"
authors = ["Dessera <dessera@qq.com>"]
description = "Simple chat protocol"
license = "LGPL-3.0"
license-file = "COPYING.LESSER"
edition = "2024"

[[bin]]
name = "tchat-server"
test = false
bench = false

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
