[package]
name = "quip"
version = "0.1.0"
authors = ["Dessera <dessera@qq.com>"]
description = "Simple chat protocol"
license = "LGPL-3.0"
edition = "2024"

[[bin]]
name = "quip-server"
test = false
bench = false

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
native-tls = "0.2.14"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-native-tls = "0.3.1"
